syntax = "proto3";

package nibiru.sudo.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "nibiru/sudo/v1/state.proto";

option go_package = "github.com/NibiruChain/nibiru/v2/x/sudo/types";

// EventUpdateSudoers: ABCI event emitted upon execution of "MsgEditSudoers".
message EventUpdateSudoers {
  nibiru.sudo.v1.Sudoers sudoers = 1 [ (gogoproto.nullable) = false ];

  // Action is the type of update that occured to the "sudoers"
  string action = 2;
}
